<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_AboutUs"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/About" />
        <item
            android:id="@+id/nav_ContactUs"
            android:icon="@drawable/ic_contacts"
            android:title="@string/ContactUs" />
        <item
            android:id="@+id/nav_News"
            android:icon="@drawable/ic_fiber_new_24dp"
            android:title="@string/News" />
        <item
            android:id="@+id/nav_Language"
            android:icon="@drawable/ic_language"
            android:title="@string/Languages" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_FaceBook"
                android:icon="@drawable/ic_facebook"
                android:title="@string/Facebook" />
            <item
                android:id="@+id/nav_Twitter"
                android:icon="@drawable/ic_twiiter"
                android:title="@string/Twitter" />
            <item
                android:id="@+id/nav_Direct_Call"
                android:icon="@drawable/ic_call_24dp"
                android:title="@string/DirectCall" />
            <item
                android:id="@+id/nav_Location"
                android:icon="@drawable/ic_location_on"
                android:title="@string/OurLocation" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />


        </menu>
    </item>
</menu>
