<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBG"
    android:orientation="vertical"
    tools:context="com.example.fatmaali.alibdaac.BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:alpha="0.2"
            android:background="@color/colorBG" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtfullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="18dp"
                android:drawableLeft="@android:drawable/sym_action_chat"
                android:drawablePadding="7dp"
                android:drawableStart="@android:drawable/sym_action_chat"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#cccccc"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtfullname"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="18dp"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:drawablePadding="7dp"
                android:drawableStart="@android:drawable/sym_action_email"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#cccccc"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/txtpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/sym_action_call"
                android:drawablePadding="11dp"
                android:drawableStart="@android:drawable/sym_action_call"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="18dp"
                android:ems="10"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textColorHint="#cccccc"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Client"/>
            <RadioGroup
                android:id="@+id/radioGroupClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/NewClient"
                    android:text="@string/NewClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/ExitingClient"
                    android:text="@string/ExistingClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
